2006-02-07 Miguel Guzman  <aglanor@gmail.com>
        * src/services/sound/SoundService.*: added the use of a sound provider for sound media management
        * src/framework/ISoundProvider.h,Makefile.am: added an interface for sound providers
        * configure.ac, src/components/ogre/sound/OgreSoundProvider.*,Makefile.am, src/components/ogre/Makefile.am: added ogre sound provider which will use ogre resources to load sound media
        * src/components/ogre/EmberOgre.cpp: initialize the SoundService to use the OgreSoundProvider

2006-02-07 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp: load first from the shared config and then from user config
    * src/components/ogre/EmberOgre.cpp, src/components/ogre/OgreResourceLoader.cpp, src/components/ogre/TerrainGenerator.cpp: don't copy terrain.cfg and resource.cfg to the user directory, instead leave them in the installation dir
    * src/components/ogre/resources.cfg: fixed typo
    * src/components/ogre/widgets/LoadingBar.cpp: added extra check for null values

2006-02-06 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/Widget.pkg,  src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
    * src/components/ogre/widgets/Give.lua, src/components/ogre/widgets/ModelEdit.lua, src/components/ogre/widgets/ScriptEdit.lua, src/components/ogre/widgets/ServerBrowser.lua: update to use the static methods in ColoredListItem

2006-02-06 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/MovableObjectRenderer.cpp: fixed a bug where when pressing the middle mouse button while rotating the preview it wouldn't release the mouse
    * src/components/ogre/widgets/HelpWidget.xml: made the xml conform better to xml standards
    * src/components/ogre/widgets/Widget.*: 
        * added tab order feature
        * moved the createColoredListItem static methods from Widget to ColoredListItem