@@ -10,21 +10,13 @@ FileSystem[user]=gui/
 [General]
 # Worldforge subversion repository should go here
 FileSystem[user]=common/
-#FileSystem=modeldefinitions/
 FileSystem[user]=materials/programs/
 FileSystem[user]=materials/scripts/
 FileSystem[user]=materials/textures/
 FileSystem[user]=models/
 FileSystem[user]=particle/
 
-
-#FileSystem[user]=fonts/
-
 FileSystem[user]=materials/splatting/
 
 [ModelDefinitions]
 FileSystem[user]=modeldefinitions/
-
-
-
-
